Updated Ballfield test app

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -15,14 +15,15 @@ SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 AppUsesMouse=y
-AppNeedsTwoButtonMouse=n
+AppNeedsTwoButtonMouse=y
+ShowMouseCursor=n
 ForceRelativeMouseMode=n
-AppNeedsArrowKeys=y
+AppNeedsArrowKeys=n
 AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
-NonBlockingSwapBuffers=y
+NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
@@ -33,6 +34,7 @@ FirstStartMenuOptions=''
 MultiABI=n
 AppVersionCode=101
 AppVersionName="1.01"
+ResetSdlConfigForThisVersion=n
 CompiledLibraries="sdl_mixer sdl_image"
 CustomBuildScript=n
 AppCflags='-O2 -finline-functions'
