--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "project/jni/application/commandergenius/commandergenius"]
 	path = project/jni/application/commandergenius/commandergenius
 	url = git://clonekeenplus.git.sourceforge.net/gitroot/clonekeenplus/clonekeenplus
+[submodule "project/jni/application/gemrb-sdl-1.3/gemrb"]
+	path = project/jni/application/gemrb-sdl-1.3/gemrb
+	url = git://gemrb.git.sourceforge.net/gitroot/gemrb/gemrb
