Enabled multitouch for GemRB, dunno if it will work

--- a/project/jni/application/gemrb-sdl-1.3/AndroidAppSettings.cfg
+++ b/project/jni/application/gemrb-sdl-1.3/AndroidAppSettings.cfg
@@ -22,7 +22,7 @@ AppNeedsArrowKeys=n
 AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
-AppUsesMultitouch=n
+AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="LCTRL C NO_REMAP NO_REMAP E"
 AppTouchscreenKeyboardKeysAmount=0
