Text input also generates touch events in SDL 1.3

--- a/project/jni/application/gemrb-sdl-1.3/AndroidAppSettings.cfg
+++ b/project/jni/application/gemrb-sdl-1.3/AndroidAppSettings.cfg
@@ -27,13 +27,13 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="LCTRL C NO_REMAP NO_REMAP E"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
-RedefinedKeysScreenKb="LCTRL C NO_REMAP NO_REMAP E"
+RedefinedKeysScreenKb="UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
 StartupMenuButtonTimeout=2000
 HiddenMenuOptions=''
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=0644
-AppVersionName="0.6.4.4"
+AppVersionCode=0646
+AppVersionName="0.6.4.6"
 ResetSdlConfigForThisVersion=n
 CompiledLibraries="sdl_mixer ogg vorbis openal png python"
 CustomBuildScript=n
