Updated OpenTTD, fixed build scripts

--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="OpenTTD"
 AppFullName=org.openttd.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-7.zip/download^MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download"
+AppDataDownloadUrl="!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-8.zip^MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip"
 VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
@@ -16,6 +16,7 @@ SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
+ShowMouseCursor=n
 ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
 AppNeedsTextInput=y
@@ -28,15 +29,16 @@ AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
 StartupMenuButtonTimeout=3000
-HiddenMenuOptions='KeyboardConfigMainMenu AudioConfig'
+HiddenMenuOptions='KeyboardConfigMainMenu'
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=11315
-AppVersionName="1.1.3.15"
+AppVersionCode=11415
+AppVersionName="1.1.4.15"
+ResetSdlConfigForThisVersion=n
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
-AppCmdline='openttd -d 3'
+AppCmdline='openttd'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
