Removed references to the crystax_static lib, which disappeared from the CrystaX NDK r6 and above

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -5,8 +5,8 @@ AppName="Ballfield"
 AppFullName=net.olofson.ballfield
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Game data is 1 Mb|ballfield.zip"
-VideoDepthBpp=32
+AppDataDownloadUrl="Game data is 1 Mb|ballfield2.zip"
+VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
 NeedGles2=n
