Some rudimentary support for hardware mouse

--- a/project/jni/application/grafx2/AndroidAppSettings.cfg
+++ b/project/jni/application/grafx2/AndroidAppSettings.cfg
@@ -6,12 +6,18 @@ AppFullName=com.grafx2
 ScreenOrientation=h
 InhibitSuspend=y
 AppDataDownloadUrl="!Data|data.zip"
+VideoDepthBpp=16
+NeedDepthBuffer=n
+NeedStencilBuffer=n
+NeedGles2=n
+SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
-NeedDepthBuffer=n
-SwVideoMode=y
+CompatibilityHacks=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
+ShowMouseCursor=y
+ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
 AppNeedsTextInput=n
 AppUsesJoystick=n
@@ -24,9 +30,11 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="SPACE TAB PLUS MINUS RETURN ESCAPE DELETE"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
+FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=23178101
-AppVersionName="2.3.1781.01"
+AppVersionCode=23178102
+AppVersionName="2.3.1781.02"
+ResetSdlConfigForThisVersion=y
 CompiledLibraries="jpeg png sdl_image sdl_ttf lua"
 CustomBuildScript=n
 AppCflags='-DVIRT_KEY -D__ENABLE_LUA__ -std=c99'
