--- a/project/jni/application/milkytracker/AndroidAppSettings.cfg
+++ b/project/jni/application/milkytracker/AndroidAppSettings.cfg
@@ -30,14 +30,15 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="SPACE TAB PLUS MINUS RETURN ESCAPE DELETE"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
-FirstStartMenuOptions='new Settings.CalibrateTouchscreenMenu(), new Settings.DisplaySizeConfig(true)'
+FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=0908503
-AppVersionName="0.90.85.03"
-CompiledLibraries="jpeg png"
+AppVersionCode=0908504
+AppVersionName="0.90.85.04"
+ResetSdlConfigForThisVersion=y
+CompiledLibraries="jpeg png zzip"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
-AppCmdline='milkytracker -fullscreen'
+AppCmdline='milkytracker -fullscreen -nonstdkb -nosplash'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
