--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -16,6 +16,7 @@ SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
+ShowMouseCursor=n
 ForceRelativeMouseMode=y
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
@@ -33,6 +34,7 @@ FirstStartMenuOptions=''
 MultiABI=y
 AppVersionCode=5207
 AppVersionName="0.5.2.07"
+ResetSdlConfigForThisVersion=n
 CompiledLibraries="sdl_image freetype"
 CustomBuildScript=n
 AppCflags='-O3'
