--- a/project/jni/application/gemrb/AndroidAppSettings.cfg
+++ b/project/jni/application/gemrb/AndroidAppSettings.cfg
@@ -16,6 +16,7 @@ SdlVideoResizeKeepAspect=y
 CompatibilityHacks=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
+ShowMouseCursor=n
 ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
 AppNeedsTextInput=y
@@ -33,10 +34,11 @@ FirstStartMenuOptions=''
 MultiABI=y
 AppVersionCode=0700
 AppVersionName="0.7.0.0"
+ResetSdlConfigForThisVersion=y
 CompiledLibraries="sdl_mixer sdl_ttf ogg vorbis openal png python"
 CustomBuildScript=n
 AppCflags='-fexceptions -finline-functions -O3 -DSTATIC_LINK=Yes -DHAVE_SNPRINTF'
 AppLdflags=''
-AppSubdirsBuild=''
+AppSubdirsBuild='gemrb/gemrb/*'
 AppCmdline='GemRB'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
