HIGHLY EXPERIMENTAL AND UNTESTED support for Xperia Play touchpad

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -35,6 +35,7 @@ MultiABI=n
 AppVersionCode=101
 AppVersionName="1.01"
 ResetSdlConfigForThisVersion=n
+DeleteFilesOnUpgrade="%"
 CompiledLibraries="sdl_mixer sdl_image"
 CustomBuildScript=n
 AppCflags='-O2 -finline-functions'
