--- a/project/jni/application/fheroes2/AndroidData/fheroes2-fr.cfg
+++ b/project/jni/application/fheroes2/AndroidData/fheroes2-fr.cfg
@@ -43,8 +43,8 @@ videomode = 640x480
 # fullscreen: on off (F4 switch)
 # fullscreen = off
 #
-# debug
-debug = on
+# debug (0 - 9)
+debug = 7
 #
 # use ttf fonts
 unicode = on
