Fixed build scripts for the case when NDK is referenced by a synlink

--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -14,6 +14,7 @@ SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
+CompatibilityHacksStaticInit=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
@@ -35,6 +36,7 @@ MultiABI=n
 AppVersionCode=11415
 AppVersionName="1.1.4.15"
 ResetSdlConfigForThisVersion=n
+DeleteFilesOnUpgrade="%"
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
 CustomBuildScript=y
 AppCflags=''
