Compilation fixes for SDL 1.3/2.0, Alien Blaster compiles but does not start

--- a/project/jni/application/alienblaster/AndroidAppSettings.cfg
+++ b/project/jni/application/alienblaster/AndroidAppSettings.cfg
@@ -14,6 +14,7 @@ SwVideoMode=n
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=
+CompatibilityHacksStaticInit=n
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
@@ -35,6 +36,7 @@ MultiABI=n
 AppVersionCode=110014
 AppVersionName="1.1.0.14"
 ResetSdlConfigForThisVersion=n
+DeleteFilesOnUpgrade="%"
 CompiledLibraries="sdl_mixer sdl_image"
 CustomBuildScript=n
 AppCflags='-O3'
