--- a/project/jni/application/sdl-1.3-test/AndroidAppSettings.cfg
+++ b/project/jni/application/sdl-1.3-test/AndroidAppSettings.cfg
@@ -20,7 +20,7 @@ AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
 ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
-AppNeedsTextInput=n
+AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=y
