Added Sun keyboard theme by Sirea (Martina Smejkalova)

--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -1,16 +1,24 @@
 # The application settings for Android libSDL port
-AppSettingVersion=16
+AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="OpenTyrian"
 AppFullName=com.googlecode.opentyrian
 ScreenOrientation=h
 InhibitSuspend=n
 AppDataDownloadUrl="Data files size is 11 Mb|tyrian21-data.zip|http://sourceforge.net/projects/libsdl-android/files/OpenTyrian/tyrian21-data.zip/download|http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
+VideoDepthBpp=16
+NeedDepthBuffer=n
+NeedStencilBuffer=n
+NeedGles2=n
+SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
-NeedDepthBuffer=n
+CompatibilityHacks=n
+CompatibilityHacksStaticInit=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=n
+ShowMouseCursor=n
+ForceRelativeMouseMode=n
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=n
@@ -21,14 +29,18 @@ RedefinedKeys="SPACE RETURN LCTRL LALT SPACE"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 RedefinedKeysScreenKb="SPACE RETURN LCTRL LALT"
+StartupMenuButtonTimeout=3000
+HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
+FirstStartMenuOptions=''
 MultiABI=n
 AppVersionCode=2117
 AppVersionName="2.1.17"
+ResetSdlConfigForThisVersion=y
+DeleteFilesOnUpgrade="%"
 CompiledLibraries="sdl_net"
 CustomBuildScript=n
 AppCflags='-O3'
 AppLdflags=''
 AppSubdirsBuild=''
-AppUseCrystaXToolchain=n
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
