--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -19,14 +19,14 @@ AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
 ForceRelativeMouseMode=n
-AppNeedsArrowKeys=n
+AppNeedsArrowKeys=y
 AppNeedsTextInput=y
-AppUsesJoystick=n
+AppUsesJoystick=y
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
-AppTouchscreenKeyboardKeysAmount=0
+AppTouchscreenKeyboardKeysAmount=6
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="1 2 3 4 5 6 1 2 3 4"
 StartupMenuButtonTimeout=3000
