--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -14,8 +14,11 @@ SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
+CompatibilityHacksStaticInit=n
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
+ShowMouseCursor=n
+ForceRelativeMouseMode=n
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=n
@@ -32,9 +35,11 @@ FirstStartMenuOptions=''
 MultiABI=n
 AppVersionCode=35009
 AppVersionName="0.3.5.0.09"
+ResetSdlConfigForThisVersion=y
+DeleteFilesOnUpgrade="%"
 CompiledLibraries="tremor ogg"
 CustomBuildScript=n
-AppCflags='-finline-functions -O2 -DTREMOR=1 -DBUILD_TYPE=LINUX32 -DTARGET_LNX=1 -Werror=strict-aliasing -Werror=cast-align -Werror=pointer-arith -Werror=address'
+AppCflags='-frtti -fexceptions -finline-functions -O2 -DTREMOR=1 -DBUILD_TYPE=LINUX32 -DTARGET_LNX=1 -Werror=strict-aliasing -Werror=cast-align -Werror=pointer-arith -Werror=address'
 AppLdflags='-ltremor'
 AppSubdirsBuild='commandergenius/src/*'
 AppCmdline=''
