Fixed cheat codes in OpenTyrian

--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -25,16 +25,16 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="SPACE RETURN LCTRL LALT SPACE"
+RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE"
 AppTouchscreenKeyboardKeysAmount=4
-AppTouchscreenKeyboardKeysAmountAutoFire=1
-RedefinedKeysScreenKb="SPACE RETURN LCTRL LALT"
+AppTouchscreenKeyboardKeysAmountAutoFire=0
+RedefinedKeysScreenKb="SPACE RETURN LALT LCTRL"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=2117
-AppVersionName="2.1.17"
+AppVersionCode=2119
+AppVersionName="2.1.19"
 ResetSdlConfigForThisVersion=y
 DeleteFilesOnUpgrade="%"
 CompiledLibraries="sdl_net"
