Added MOAR DIRTY HACKZ to the SDL compatibility mode, MilkyTracker now does not have any drawing glitches.

--- a/project/jni/application/milkytracker/AndroidAppSettings.cfg
+++ b/project/jni/application/milkytracker/AndroidAppSettings.cfg
@@ -31,10 +31,10 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="SPACE TAB PLUS MINUS RETURN ESCAPE DELETE"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
-FirstStartMenuOptions=''
+FirstStartMenuOptions='new Settings.DummyMenu()'
 MultiABI=n
-AppVersionCode=0908504
-AppVersionName="0.90.85.04"
+AppVersionCode=0908505
+AppVersionName="0.90.85.05"
 ResetSdlConfigForThisVersion=y
 DeleteFilesOnUpgrade="%"
 CompiledLibraries="jpeg png zzip"
