--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -19,16 +19,16 @@ AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
 ForceRelativeMouseMode=n
-AppNeedsArrowKeys=y
+AppNeedsArrowKeys=n
 AppNeedsTextInput=y
-AppUsesJoystick=y
+AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
-RedefinedKeysScreenKb="1 2 3 4 5 6 1 2 3 4"
+RedefinedKeysScreenKb="0 1 2 3 4 5 6 7 8 9"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
