--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="OpenTTD"
 AppFullName=org.openttd.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-8.zip^MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip"
+AppDataDownloadUrl="!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-1.2.1.zip^!MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip"
 VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
@@ -25,18 +25,18 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE"
+RedefinedKeys="LALT RETURN NO_REMAP NO_REMAP SPACE DELETE"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
 StartupMenuButtonTimeout=3000
-HiddenMenuOptions='KeyboardConfigMainMenu'
+HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=11415
-AppVersionName="1.1.4.15"
-ResetSdlConfigForThisVersion=n
-DeleteFilesOnUpgrade="%"
+AppVersionCode=12116
+AppVersionName="1.2.1.16"
+ResetSdlConfigForThisVersion=y
+DeleteFilesOnUpgrade="data gm"
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
 CustomBuildScript=y
 AppCflags=''
