Updated Commander Genius project

--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -5,8 +5,8 @@ AppName="Commander Genius"
 AppFullName=net.sourceforge.clonekeenplus
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="!Data files|data.zip^High-quality GFX and music - 40 Mb|http://sourceforge.net/projects/libsdl-android/files/CommanderGenius/commandergenius-hqp-1.8.zip/download"
-VideoDepthBpp=16
+AppDataDownloadUrl="!Game data|data2.zip^High-quality GFX and music - 40 Mb|http://sourceforge.net/projects/libsdl-android/files/CommanderGenius/commandergenius-hqp-1.8.zip/download"
+VideoDepthBpp=24
 NeedDepthBuffer=n
 NeedStencilBuffer=n
 NeedGles2=n
@@ -26,15 +26,15 @@ AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="LCTRL LALT NO_REMAP NO_REMAP RETURN ESCAPE"
-AppTouchscreenKeyboardKeysAmount=3
+AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
-RedefinedKeysScreenKb="LCTRL LALT SPACE"
+RedefinedKeysScreenKb="LCTRL LALT SPACE RETURN"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions=''
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=35009
-AppVersionName="0.3.5.0.09"
+AppVersionCode=40010
+AppVersionName="0.4.0.10"
 ResetSdlConfigForThisVersion=y
 DeleteFilesOnUpgrade="%"
 CompiledLibraries="tremor ogg"
