Option for soft text input to emulate hw keyboard

--- a/project/jni/application/milkytracker/AndroidAppSettings.cfg
+++ b/project/jni/application/milkytracker/AndroidAppSettings.cfg
@@ -15,6 +15,7 @@ SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=y
 CompatibilityHacksStaticInit=n
+CompatibilityHacksTextInputEmulatesHwKeyboard=y
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 ShowMouseCursor=y
@@ -33,8 +34,8 @@ StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions='new Settings.DummyMenu()'
 MultiABI=n
-AppVersionCode=0908505
-AppVersionName="0.90.85.05"
+AppVersionCode=0908506
+AppVersionName="0.90.85.06"
 ResetSdlConfigForThisVersion=y
 DeleteFilesOnUpgrade="%"
 CompiledLibraries="jpeg png zzip"
