--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -15,6 +15,7 @@ SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 CompatibilityHacksStaticInit=n
+CompatibilityHacksTextInputEmulatesHwKeyboard=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
@@ -33,8 +34,8 @@ StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=12117
-AppVersionName="1.2.1.17"
+AppVersionCode=12118
+AppVersionName="1.2.1.18"
 ResetSdlConfigForThisVersion=y
 DeleteFilesOnUpgrade="data gm"
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
