Fixed OpenAL eating CPU in background

--- a/project/jni/application/alienblaster/AndroidAppSettings.cfg
+++ b/project/jni/application/alienblaster/AndroidAppSettings.cfg
@@ -15,6 +15,7 @@ SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=
 CompatibilityHacksStaticInit=n
+CompatibilityHacksTextInputEmulatesHwKeyboard=n
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
@@ -25,12 +26,12 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
+RedefinedKeys="RETURN LCTRL NO_REMAP NO_REMAP LCTRL"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 RedefinedKeysScreenKb="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
 StartupMenuButtonTimeout=3000
-HiddenMenuOptions=''
+HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
 MultiABI=n
 AppVersionCode=110014
