CG Project Update

--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -10,7 +10,7 @@ VideoDepthBpp=24
 NeedDepthBuffer=n
 NeedStencilBuffer=n
 NeedGles2=n
-SwVideoMode=y
+SwVideoMode=n
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
