--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="OpenArena"
 AppFullName=ws.openarena.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Game data|http://10.0.2.2/up/oa-0.8.8-1.zip"
+AppDataDownloadUrl="Game data|http://172.17.57.25/oa-0.8.8-1.zip|http://10.0.2.2/up/oa-0.8.8-1.zip"
 VideoDepthBpp=24
 NeedDepthBuffer=y
 NeedStencilBuffer=y
@@ -31,7 +31,7 @@ AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="0 1 2 3 4 5 6 7 8 9"
 StartupMenuButtonTimeout=3000
-HiddenMenuOptions='OptionalDownloadConfig'
+HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
 MultiABI=n
 AppVersionCode=101
