Fixes for TeeWorlds compilation

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -20,8 +20,8 @@ AppUsesMouse=y
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
 ForceRelativeMouseMode=n
-AppNeedsArrowKeys=n
-AppNeedsTextInput=n
+AppNeedsArrowKeys=y
+AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=y
@@ -34,11 +34,11 @@ StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=101
-AppVersionName="1.01"
+AppVersionCode=08801
+AppVersionName="0.8.8.01"
 ResetSdlConfigForThisVersion=n
 DeleteFilesOnUpgrade="%"
-CompiledLibraries="sdl_mixer sdl_image freetype curl"
+CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg"
 CustomBuildScript=y
 AppCflags='-O2 -finline-functions'
 AppLdflags=''
