Updated OpenArena project

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="OpenArena"
 AppFullName=ws.openarena.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Game data|http://172.17.57.25/oa-0.8.8-1.zip|http://10.0.2.2/up/oa-0.8.8-1.zip"
+AppDataDownloadUrl="Game data|http://sourceforge.net/projects/libsdl-android/files/OpenArena/oa-0.8.8-1.zip/download"
 VideoDepthBpp=24
 NeedDepthBuffer=y
 NeedStencilBuffer=y
@@ -34,8 +34,8 @@ StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=08801
-AppVersionName="0.8.8.01"
+AppVersionCode=08802
+AppVersionName="0.8.8.02"
 ResetSdlConfigForThisVersion=n
 DeleteFilesOnUpgrade="%"
 CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg"
