Updated description of advertisement API, added function to request new ad.

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -45,3 +45,7 @@ AppLdflags=''
 AppSubdirsBuild=''
 AppCmdline=''
 ReadmeText='^Readme text'
+MinimumScreenSize=s
+AdmobPublisherId=n
+AdmobTestDeviceId=
+AdmobBannerSize=
