--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -45,3 +45,7 @@ AppLdflags=''
 AppSubdirsBuild=''
 AppCmdline=''
 ReadmeText='^Readme text'
+MinimumScreenSize=n
+AdmobPublisherId=a14fe4dd0ebe974
+AdmobTestDeviceId=66133194946FB6C1CD0ED2EFCCB82539
+AdmobBannerSize=BANNER
