Changed accelerometer/multitouch/joystick input once again, removed touch event ratelimiting for Froyo and newer.

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="Ballfield"
 AppFullName=net.olofson.ballfield
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Game data is 1 Mb|ballfield2.zip"
+AppDataDownloadUrl="Game data is 1 Mb|ballfield3.zip"
 VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
@@ -20,10 +20,10 @@ AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
 ForceRelativeMouseMode=n
-AppNeedsArrowKeys=n
+AppNeedsArrowKeys=y
 AppNeedsTextInput=y
-AppUsesJoystick=n
-AppHandlesJoystickSensitivity=n
+AppUsesJoystick=y
+AppUsesAccelerometer=y
 AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
