--- a/project/jni/application/test-advertisements/AndroidAppSettings.cfg
+++ b/project/jni/application/test-advertisements/AndroidAppSettings.cfg
@@ -3,8 +3,8 @@ AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="Admob test"
 AppFullName=ws.openarena.sdl
-ScreenOrientation=h
-InhibitSuspend=n
+ScreenOrientation=v
+InhibitSuspend=y
 AppDataDownloadUrl="Game data is 1 Mb|ballfield2.zip"
 VideoDepthBpp=16
 NeedDepthBuffer=n
