Tentative fix for the ad misplacement when the app is restored from background, by slvn

--- a/project/jni/application/test-advertisements/AndroidAppSettings.cfg
+++ b/project/jni/application/test-advertisements/AndroidAppSettings.cfg
@@ -3,7 +3,7 @@ AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="Admob test"
 AppFullName=ws.openarena.sdl
-ScreenOrientation=v
+ScreenOrientation=h
 InhibitSuspend=y
 AppDataDownloadUrl="Game data is 1 Mb|ballfield2.zip"
 VideoDepthBpp=16
@@ -23,7 +23,7 @@ ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
 AppNeedsTextInput=y
 AppUsesJoystick=n
-AppHandlesJoystickSensitivity=n
+AppUsesAccelerometer=n
 AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
